--- a/PyQt/pyqt_ui/bed_mainwindow.ui
+++ b/PyQt/pyqt_ui/bed_mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1183</width>
-    <height>1025</height>
+    <width>898</width>
+    <height>774</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,36 +18,170 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="6" colspan="2">
-     <spacer name="verticalSpacer">
+    <item row="3" column="0">
+     <spacer name="horizontalSpacer_16">
       <property name="orientation">
-       <enum>Qt::Vertical</enum>
+       <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>17</width>
-        <height>112</height>
+        <width>427</width>
+        <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="1" column="0">
-     <spacer name="horizontalSpacer_12">
+    <item row="3" column="1">
+     <widget class="QPushButton" name="ReadSD">
+      <property name="styleSheet">
+       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
+font: 9pt &quot;Microsoft YaHei UI&quot;;
+color: rgb(255, 255, 255);
+border-style: solid;
+border-radius: 15px;
+</string>
+      </property>
+      <property name="text">
+       <string>Read SD</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="0">
+     <spacer name="horizontalSpacer_9">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>427</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="1">
+     <spacer name="verticalSpacer_7">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeType">
        <enum>QSizePolicy::Fixed</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>358</width>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="6" column="5" rowspan="2">
+     <spacer name="horizontalSpacer_7">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>494</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="1" column="1" colspan="8">
+    <item row="10" column="0">
+     <spacer name="horizontalSpacer_6">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>494</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="0">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>262</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="6" column="0" rowspan="2">
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>494</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="4" column="0">
+     <spacer name="horizontalSpacer_11">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>494</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="7" column="1" colspan="2">
+     <widget class="QPushButton" name="CreateRecordsButton">
+      <property name="styleSheet">
+       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
+font: 9pt &quot;Microsoft YaHei UI&quot;;
+color: rgb(255, 255, 255);
+border-style: solid;
+border-radius: 15px;
+</string>
+      </property>
+      <property name="text">
+       <string>Create Records</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="5">
+     <spacer name="horizontalSpacer_14">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>473</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="4" column="5">
+     <spacer name="horizontalSpacer_10">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>494</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="1">
      <widget class="QLabel" name="label">
       <property name="maximumSize">
        <size>
@@ -66,53 +200,8 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="9">
-     <spacer name="horizontalSpacer_13">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>358</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="2" column="2">
-     <spacer name="verticalSpacer_7">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="0" colspan="2">
-     <spacer name="horizontalSpacer_16">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>427</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="3" column="2" colspan="4">
-     <widget class="QPushButton" name="ReadSD">
+    <item row="11" column="1">
+     <widget class="QPushButton" name="DataViewButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
 font: 9pt &quot;Microsoft YaHei UI&quot;;
@@ -122,37 +211,11 @@ border-radius: 15px;
 </string>
       </property>
       <property name="text">
-       <string>Read SD</string>
+       <string>DataView</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="8" colspan="2">
-     <spacer name="horizontalSpacer_15">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>473</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="4" column="0" colspan="2">
-     <spacer name="horizontalSpacer_11">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="4" column="2" colspan="2">
+    <item row="4" column="1">
      <spacer name="verticalSpacer_5">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -168,8 +231,8 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="4" column="8" colspan="2">
-     <spacer name="horizontalSpacer_10">
+    <item row="8" column="5">
+     <spacer name="horizontalSpacer_8">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -181,7 +244,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="5" column="2" rowspan="2" colspan="6">
+    <item row="5" column="1">
      <widget class="QPushButton" name="ConfigButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -196,7 +259,48 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="6" column="4" rowspan="2" colspan="2">
+    <item row="0" column="5">
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>242</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="9" column="1">
+     <widget class="QPushButton" name="RecordsButton">
+      <property name="styleSheet">
+       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
+font: 9pt &quot;Microsoft YaHei UI&quot;;
+color: rgb(255, 255, 255);
+border-style: solid;
+border-radius: 15px;
+</string>
+      </property>
+      <property name="text">
+       <string>Records</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="5">
+     <spacer name="horizontalSpacer_15">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>473</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="6" column="1">
      <spacer name="verticalSpacer_4">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -212,48 +316,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="7" column="0" rowspan="2" colspan="2">
-     <spacer name="horizontalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="7" column="8" rowspan="2" colspan="2">
-     <spacer name="horizontalSpacer_7">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="8" column="2" colspan="6">
-     <widget class="QPushButton" name="CreateRecordsButton">
-      <property name="styleSheet">
-       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
-font: 9pt &quot;Microsoft YaHei UI&quot;;
-color: rgb(255, 255, 255);
-border-style: solid;
-border-radius: 15px;
-</string>
-      </property>
-      <property name="text">
-       <string>Create Records</string>
-      </property>
-     </widget>
-    </item>
-    <item row="9" column="4" colspan="2">
+    <item row="8" column="1">
      <spacer name="verticalSpacer_6">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -269,48 +332,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="9" column="7" colspan="3">
-     <spacer name="horizontalSpacer_8">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="10" column="2" colspan="4">
-     <widget class="QPushButton" name="RecordsButton">
-      <property name="styleSheet">
-       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
-font: 9pt &quot;Microsoft YaHei UI&quot;;
-color: rgb(255, 255, 255);
-border-style: solid;
-border-radius: 15px;
-</string>
-      </property>
-      <property name="text">
-       <string>Records</string>
-      </property>
-     </widget>
-    </item>
-    <item row="11" column="0" colspan="2">
-     <spacer name="horizontalSpacer_6">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>494</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="11" column="5" colspan="2">
+    <item row="10" column="1">
      <spacer name="verticalSpacer_8">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -326,48 +348,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="12" column="0" colspan="2">
-     <spacer name="horizontalSpacer_9">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>427</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="12" column="2" colspan="4">
-     <widget class="QPushButton" name="DataViewButton">
-      <property name="styleSheet">
-       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
-font: 9pt &quot;Microsoft YaHei UI&quot;;
-color: rgb(255, 255, 255);
-border-style: solid;
-border-radius: 15px;
-</string>
-      </property>
-      <property name="text">
-       <string>DataView</string>
-      </property>
-     </widget>
-    </item>
-    <item row="12" column="8" colspan="2">
-     <spacer name="horizontalSpacer_14">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>473</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="13" column="3" colspan="2">
+    <item row="12" column="1">
      <spacer name="verticalSpacer_2">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -387,8 +368,8 @@ border-radius: 15px;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1183</width>
-     <height>26</height>
+     <width>898</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
